# aoc-2024

./: .editorconfig  .gitignore  Cargo.lock.license  Cargo.toml  README.md
day01_hysteria/: .gitignore  Cargo.toml
day02_rednosed/: Cargo.toml
day02_rednosed/src/: main.rs
day03_mul/: Cargo.toml
day03_mul/src/: main.rs
day04_ceres_search/: Cargo.toml
day04_ceres_search/src/: main.rs
day05_print_queue/: Cargo.toml
day05_print_queue/src/: main.rs
day06_guard_gallivant/: Cargo.toml
day06_guard_gallivant/src/: main.rs
day07_bridge_repair/: Cargo.toml
day07_bridge_repair/src/: main.rs
day08_resonant_collinearity/: Cargo.toml
day08_resonant_collinearity/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
