# SPDX-FileCopyrightText: 2024 Petr Pucil <petr.pucil@seznam.cz>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[workspace]
resolver = "2"
members = [
    "day01_hysteria",
    "day02_rednosed",
    "day03_mul",
    "day04_ceres_search",
    "day05_print_queue",
    "day06_guard_gallivant",
    "day07_bridge_repair",
]
